# Object-Oriented-Programming

./: README.md
a7-8v5/a7-8v5/a7-8v5/a7-8v2/a7-8/: Agenda.cpp  Agenda.h  Agenda_csv.cpp  Agenda_csv.h  Agenda_html.cpp  Agenda_html.h  CMakeLists.txt  Controller.cpp  Controller.h  Duration.cpp  Duration.h  DynamicVector.cpp  DynamicVector.h  Event.cpp  Event.h  EventModel.cpp  EventModel.h  GUIOLD.cpp  GUIOLD.h  ListViewWidget.cpp  ListViewWidget.h  ListViewWidget.ui  Repo.cpp  Repo.h  UI.cpp  UI.h  UMLA9.mdj  agenda.csv  agenda.html  compa.cpp  compa.h  events.txt  gui.cpp  gui.h  main.cpp  qtgui.cpp  qtgui.h  qtgui.ui  redoclass.cpp  redoclass.h  (+6 more)
a7-8v5/a7-8v5/a7-8v5/a7-8v2/a7-8/lab/: Comparator.cpp  Comparator.h  Comparator_ascending_by_nr_ppl.cpp  Comparator_ascending_by_nr_ppl.h  Comparator_descending_by_title.cpp  Comparator_descending_by_title.h
a7-8v5/a7-8v5/a7-8v5/a7-8v2/build-a7-8-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
a7-8v5/a7-8v5/a7-8v5/a7-8v2/build-a7-8-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-d51db7ac1814abc2d973.json  index-2022-05-28T17-28-17-0875.json  target-a5_6_autogen_timestamp_deps-Debug-b329e21ca7313731f6e8.json
a7-8v5/a7-8v5/a7-8v5/a7-8v2/build-a7-8-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-dc8f4f0353c8d1a820c3.json  codemodel-v2-0eae469a4272534d8127.json  target-a5_6-Debug-04972c8a5379959a0257.json  target-a5_6_autogen-Debug-76afbd502c9473fb3439.json
a7-8v5/a7-8v5/a7-8v5/a7-8v2/build-a7-8-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
a7-8v5/a7-8v5/a7-8v5/a7-8v2/build-a7-8-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: Agenda.cpp.E61C77C7BCA8421F.idx  Agenda.h.886A83F6C157D71D.idx  Agenda_csv.cpp.EEABA3EDDBB9503D.idx  Agenda_csv.h.B3F75D6511B43026.idx  Agenda_html.cpp.BA213CE4B16FF8D2.idx  Agenda_html.h.D629FAA018FD231F.idx  Controller.cpp.3B3EB798218B4A5F.idx  Controller.h.27939C0B57EE4A20.idx  Duration.cpp.8D5ECEB5D77A2D69.idx  Duration.h.1B2BB1C406C6F507.idx  DynamicVector.cpp.54DEAB858E1E9CBA.idx  DynamicVector.h.9A98A6E4B7837145.idx  Event.cpp.8032C46553508283.idx  Event.h.0E1EA8A62B1BB61C.idx  EventModel.cpp.E2AF626ED5722093.idx  EventModel.h.0BA9AF8F2AD71580.idx  GUIOLD.cpp.04C62F8F1428F23C.idx  GUIOLD.h.DDE8FB961F8E6594.idx  ListViewWidget.cpp.502CD1E9045921C6.idx  ListViewWidget.h.8B422835A4B4583B.idx  QHBoxLayout.03E1624BE1AAC5D3.idx  QLegend.B704A1A02BBF1886.idx  QPieSeries.47ED7528E49BD6C6.idx  QPieSlice.52C9B2682708F5EF.idx  QSplitter.EB92F4B33683D973.idx  Repo.cpp.7A1F33F963E6B426.idx  Repo.h.39FE95760206913D.idx  UI.cpp.6A3E56E746A8DFAD.idx  UI.h.BE414B165E4FBBCF.idx  commdlg.h.C9838AE6F85B4183.idx  compa.cpp.68A1668DB51A073B.idx  compa.h.9F7A5AA317E35344.idx  crtdbg.h.A26EF4298E105420.idx  crtdbg_s.h.1A60EE399BB52F39.idx  exception.h.6347ADACB335B5B2.idx  gui.cpp.D962E6393992DBB1.idx  gui.h.B45B1AAB38965141.idx  limits.h.38647169D52F47DF.idx  listviewwidget.cpp.52DC9994C606C2CB.idx  listviewwidget.h.AB2A2E084ED8AFBD.idx  (+68 more)
a7-8v5/a7-8v5/a7-8v5/a7-8v2/build-a7-8-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/a5_6_autogen/: deps  mocs_compilation.cpp
a7-8v5/a7-8v5/a7-8v5/a7-8v2/build-a7-8-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/a5_6_autogen/EWIEGA46WW/: moc_GUIOLD.cpp  moc_GUIOLD.cpp.d  moc_ListViewWidget.cpp  moc_ListViewWidget.cpp.d  moc_qtgui.cpp  moc_qtgui.cpp.d
a7-8v5/a7-8v5/a7-8v5/a7-8v2/build-a7-8-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/a5_6_autogen/include/: ui_qtgui.h
cuet/: CMakeLists.txt  main.cpp
testqt/: CMakeLists.txt  controller.cpp  controller.h  gui.cpp  gui.h  gui.ui  main.cpp  repo.cpp  repo.h  shop.txt  shoplist.cpp  shoplist.h
